# serialization

./: Makefile.am  bootstrap  configure.ac  example.pro  serialization.pro
examples/: Makefile.am  example1.cpp  example2.cpp  example3.cpp  example_tagged_pointer.cpp  slog.cpp
include/: Makefile.am
include/serialization/: BasicTypes.hpp  CoreSchema.hpp  CustomType.hpp  Deserializer.hpp  Field.hpp  FieldType.hpp  Header.hpp  Macros.hpp  Makefile.am  Pointer.hpp  PrimitiveType.hpp  Schema.hpp  SchemaDescription.hpp  SchemaLog.hpp  SchemaSerialization.hpp  Serializable.hpp  Serializer.hpp  TaggedPointer.hpp  Type.hpp  Util.hpp
src/: CoreSchema.cpp  CustomType.cpp  Deserializer.cpp  Field.cpp  FieldType.cpp  Header.cpp  Makefile.am  PrimitiveType.cpp  Schema.cpp  SchemaDescription.cpp  SchemaLog.cpp  SchemaSerialization.cpp  Serializable.cpp  Serializer.cpp  Type.cpp
unsorted/: ideas.org
