noinst_PROGRAMS = example_tagged_pointer
# example1 example2 example3 
bin_PROGRAMS   = slog

AM_CPPFLAGS = -I$(top_srcdir)/include
AM_LDFLAGS  = ../src/libserialization.la

# example1_SOURCES = example1.cpp
# example2_SOURCES = example2.cpp
# example3_SOURCES = example3.cpp
slog_SOURCES     = slog.cpp
example_tagged_pointer_SOURCES = example_tagged_pointer.cpp
