lib_LTLIBRARIES = libserialization.la

AM_CPPFLAGS = -I$(top_srcdir)/include

libserialization_la_SOURCES = \
    Serializer.cpp \
    Deserializer.cpp \
    Header.cpp \
    FieldType.cpp \
    Field.cpp \
    Type.cpp \
    PrimitiveType.cpp \
    CustomType.cpp \
    SchemaSerialization.cpp \
    SchemaLog.cpp \
    SchemaDescription.cpp \
    CoreSchema.cpp \
    Serializable.cpp \
    Schema.cpp
