# include/nytaxi/Makefile.am
libserialization_la_includedir = $(includedir)/serialization
libserialization_la_include_HEADERS = \
BasicTypes.hpp \
CoreSchema.hpp \
CustomType.hpp \
Deserializer.hpp \
Field.hpp \
FieldType.hpp \
Header.hpp \
Macros.hpp \
PrimitiveType.hpp \
Schema.hpp \
SchemaDescription.hpp \
SchemaLog.hpp \
SchemaSerialization.hpp \
Serializable.hpp \
Serializer.hpp \
Type.hpp \
Pointer.hpp \
Util.hpp \
TaggedPointer.hpp
